--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class=wrap>
-    <button class=button>← Drag / tap</button>
+    <div class=button>← Drag / tap</div>
 
     <nav class="nav">
       <ul>
